regressions/valid/issue8.wacc
begin 

pair(int, int) a = newpair(1, 2);
int[] b = [1,2,3];

println(a);
println(b)

end
